# Helium-reader

./: CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.web.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  menu.rs  models.rs  paths.rs  sandbox.rs  state.rs
src-tauri/src/commands/: chat.rs  context_menu.rs  dialog.rs  fs.rs  mod.rs  watcher.rs  window.rs
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  main.tsx
src/renderer/src/components/chat/: ChatInput-DESKTOP-S12LFFV.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel-DESKTOP-S12LFFV.tsx  ChatPanel.css  ChatPanel.tsx
src/renderer/src/components/chrome/: ShortcutsOverlay.css  ShortcutsOverlay.tsx  StatusBar.css  StatusBar.tsx  TitleBar.css  TitleBar.tsx
src/renderer/src/components/editor/: EditorPane.css  EditorPane.tsx  extensions.ts  slashCommands.ts  spellcheck.ts  useCodeMirror.ts
src/renderer/src/components/layout/: AppShell.css  AppShell.tsx  Sidebar.css  Sidebar.tsx  SplitPane.css  SplitPane.tsx
src/renderer/src/hooks/: useDocumentOutline.ts  useFileSystem.ts  useFocusMode.ts  useMarkdownProcessor.ts  useSplitPane.ts  useWatcher.ts
src/renderer/src/lib/: remark-pipeline.tsx  shiki-instance.ts  slugify.ts  tauri-api.ts
src/renderer/src/store/: chatStore.ts  editorStore.ts  fileSystemStore.ts  transformStore.ts  uiStore.ts
src/renderer/src/styles/: codemirror-theme.ts  global.css  theme.css
src/shared/: types.ts
(+15 files in other folders)
