[package]
name = "helium-reader"
version = "1.0.0"
description = "A Ghost-inspired markdown editor for Windows 11"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
notify-debouncer-full = "0.3"
trash = "5"
dunce = "1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
